[package]
name = "rust-nrf-blinky"
version = "0.1.0"
edition = "2021"

[features]
default = ["nightly"]
nightly = [
    "embassy-executor/nightly",
    "embassy-nrf/nightly",
    "embassy-time/nightly",
    "embassy-time/unstable-traits",
]

[dependencies]
embassy-executor = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nightly", "integrated-timers", "arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.1.3", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nightly"] }
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nrf52832", "time-driver-rtc1", "gpiote", "nightly"] }

defmt = "0.3"
defmt-rtt = "0.3"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
